Update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Educator JS Codespace Template",
   "source": "src/index.html",
-  "homepage": "https://{Abhayg444}.github.io/{Portfolio}/",
+  "homepage": "https://Abhayg444.github.io/Portfolio/",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "build-gh": "parcel build --public-url 'https://{Abhayg444}.github.io/{Portfolio}'",
+    "build-gh": "parcel build --public-url 'https://Abhayg444.github.io/Portfolio'",
     "predeploy": "npm run build-gh",
     "deploy": "gh-pages -d dist"
   },
