Update repository and bug URLs in package.json

--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/microsoft/codespaces-teaching-template-js.git"
+    "url": "git+https://github.com/Abhayg444/Portfolio.git"
   },
   "author": "Microsoft",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/microsoft/codespaces-teaching-template-js/issues"
+    "url": "https://github.com/Abhayg444/Portfolio/issues"
   },
   "dependencies": {
     "react": "^18.2.0",
